variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value int
int a=0;
^Variables:4: error: not found: value a
  a=a+1;
  ^Variables:6: error: not found: value PrendsBiscuit
PrendsBiscuit();
^Variables:7: error: not found: value a
while (a!=0) {
       ^Variables:9: error: not found: value a
  a=a-1
  ^